crates/toml_edit/tests/snapshots/invalid/key/newline-04.stderr
TOML parse error at line 1, column 1
  |
1 | """long
  | ^^^^^^^
keys cannot be multi-line basic strings, expected basic string, literal string
